--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
       rel="stylesheet" integrity="sha389ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
         crossorigin="anonymous">
-     <sytle>
-           #banner1{
-              height: 360px;
-               width : 100%;
-              object-filt:cover;
-            }
-      </sytle>
+                   <sytle>
+                         #banner1{
+                     height: 360px;
+                      width : 100%;
+                      object-filt:cover;
+                       }
+                         </sytle>
        </head>
        <body>
        <div id="container">
@@ -29,7 +29,7 @@
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
        culpa qui officia deserunt mollit anim id est laborum.</p>
-      <h2 class="text-center mt-2 mb-4">Open Positions</h2>  
+      <h2 class="text-center mt-2 mb-4">job Openings</h2>  
      <div>
        {%for jobs in jobs%}
        {% include'jobitem.html' %}
